# closure

./: .gitignore  TODO  docker-compose.yml  psql_commands  pyproject.toml  rules
closure/: closure.py  db.py  nb.ipynb  template.py  testingo.py
closure/sql/: closure_checks.sql  closure_deletes.sql  closure_inserts.sql  closure_selects.sql  closure_tables.sql  closure_template.sql  drops.sql
closure/sql/OLD/: closure_functions.sql
closure/ts/: impl.sql  query.sql  timeseries.sql  ts.py
test/: test_plain_fail.py  test_plain_node_item.py  test_plain_ok.py  test_template.py
